# OpenGravity

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  lint_err.txt  package-lock.json  package.json  tsconfig.json  tsconfig.main.json  vite.config.mjs  vite.config.ts
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
app/: main.ts  preload.ts
core/: __init__.py  pyproject.toml  setup.py
core/agent/: orchestrator.py  planner.py
core/artifacts/: manager.py
core/llm/: adapter.py  providers.py
core/memory/: context.py
core/rust_core/: Cargo.toml  pyproject.toml
core/rust_core/src/: lib.rs
core/security/: __init__.py  audit.py  policy.py
core/server/: api.py
core/tests/: test_basic.py  test_security.py
core/tools/: browser.py  codebase.py  filesystem.py  shell.py
docs/: architecture.md  overview.md  providers.md  quick-start.md  security.md
renderer/: index.html
renderer/src/: App.tsx  main.tsx
renderer/src/components/: ArtifactsPanel.tsx  ChatPanel.tsx  OllamaWizard.tsx  SettingsPanel.tsx  Sidebar.tsx  TaskPanel.tsx
renderer/src/store/: agentStore.ts  ollamaStore.ts
renderer/src/types/: electron.d.ts
renderer/styles/: global.css
scripts/: install-ollama.ps1  install-ollama.sh
