[package]
name = "opengravity_core_rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "opengravity_core_rust"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.0", features = ["extension-module"] }
regex = "1.10.3"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
