[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "opengravity_core_rust"
version = "0.2.0"
description = "Hardened Rust security core for OpenGravity"
authors = [{ name = "John V. Teixido" }]
dependencies = []
requires-python = ">=3.11"

[tool.maturin]
module-name = "opengravity_core_rust"
features = ["pyo3/extension-module"]
